# regen-iri-gen

./: LICENSE  README.md  pyproject.toml
regen_iri_gen/: content_hash.py  iri.py
tests/: conftest.py  test_content_hash.py  test_iri.py
